Fix UI bugs on PDP: remove extra space above footer, fix error message capitalize and position, fix quantity on bag and product details, fix padding in size selectors

--- a/src/components/Bag/styles.scss
+++ b/src/components/Bag/styles.scss
@@ -165,18 +165,19 @@
           padding: 2px 0;
           font-size: 10px;
   
-          .qty {
+          input {
             padding: 3px 12px;
             -webkit-box-flex: 1;
             -ms-flex-positive: 1;
             -webkit-flex-grow: 1;
             flex-grow: 1;
+            width: inherit;
             text-align: center;
             border-left: 1px solid #ffffff;
             border-right: 1px solid #ffffff;
           }
   
-          .btn-qty {
+          .plus-quantity, .minus-quantity {
             font-size: 12px;
             cursor: pointer;
             padding: 3px 12px;
