--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -24,4 +24,4 @@ $header-height: 50px;
 $main-header: 84px;
 $secondary-header-height: 43px;
 $header-top:0px;
-$footer-top:50px;
+$footer-top:0px;
